# ontime-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  local_template.cmake  todo.md  vcpkg.json
src/: CMakeLists.txt  CalendarApi.h  DefaultCalendarApi.h  DefaultPlayer.cpp  DefaultPlayer.h  DefaultRecorder.cpp  DefaultRecorder.h  DeviceFacade.cpp  DeviceFacade.h  DeviceState.h  Player.cpp  Player.h  Recorder.h  app.cpp  logging.cpp  logging.h
src/domain/: CMakeLists.txt  DeviceFacade.cpp  DeviceFacade.h  DeviceState.h  Player.cpp  Player.h  Recorder.h  app_state_holder.cpp  app_state_holder.h  config.h  default_recorder.cpp  default_recorder.h  device_facade.cpp  device_facade.h  device_repository.cpp  device_repository.h  device_state.h  i_player.h  logging.cpp  logging.h  player.cpp  player.h  recorder.cpp  recorder.h  recorder_i.h
src/ui/: CMakeLists.txt  DeviceIdManager.cpp  DeviceIdManager.h  DeviceIdMapper.h  DeviceMapper.cpp  EditorScreen.cpp  EditorScreen.h  MainInputProcessor.cpp  MainInputProcessor.h  MainScreen.cpp  MainScreen.h  PlayerComponent.cpp  PlayerComponent.h  PlayerFragment.cpp  PlayerFragment.h  Screen.h  device_id_manager.cpp  device_id_manager.h  editor_screen.cpp  editor_screen.h  formatting.cpp  formatting.h  input.cpp  input.h  main_input_processor.cpp  main_input_processor.h  main_screen.cpp  main_screen.h  media_screen.cpp  media_screen.h  player_component.cpp  player_component.h  recorder_component.cpp  recorder_component.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  DBusCalendarApiTest.cpp  InputTest.cpp
test/unit/domain/: app_state_holder_test.cpp  device_repository_test.cpp
test/unit/ui/: FormattingTest.cpp  InputTest.cpp  device_id_manager_test.cpp  formatting_test.cpp  input_test.cpp  main_input_processor_test.cpp
test/unit/util/: app_state_holder_mock.h  device_facade_mock.h  device_repository_mock.h  logger_mock.h  player_mock.h  recorder_mock.h
